@@ -9,7 +9,7 @@
 
 * Core
 
-** 功能: 上下文新增 relatedTraceId，允许关联异步任务trace、触发trace
+** 功能: 支持异步线程若缺少 traceId 将自动设置，并新增 relatedTraceId，允许关联异步任务trace、触发trace
 ** 优化: PeriodicTask 支持使用异步线程池
 ** 优化: Threads execute、delay、schedule、executeAndWait 方法支持指定线程池运行
 ** 优化: 支持配置缓存key 分隔符（`shoulder.application.cacheKeySplit`）
@@ -18,6 +18,11 @@
 * Cluster
 
 ** 功能: 升级 RedisInstanceIdProvider 提供企业级 instantId 分配策略（支持 redis 集群、增加权限、更精准的报错提示和排查指南等）。
+
+* 其他
+** 优化: 部分配置项添加提示：
+*** `shoulder.redis.key-prefix` 默认以 `appId:` 开头，
+*** `shoulder.db.sequence.table-name` 配置添加开关，默认 `tb_sequence`
 
 == 1.1.1 （2025-05-30）
 
